--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,31 +1,34 @@
-name: Generate Snake
+name: Generate Snake Matrix Style 🐍
 
 on:
   schedule:
-    - cron: "0 0 * * *" # Atualiza todo dia à meia-noite
+    # Gera a cobrinha uma vez por dia à meia-noite
+    - cron: "0 0 * * *"
   workflow_dispatch:  # permite rodar manualmente
 
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+      - name: Checkout do repositório
+        uses: actions/checkout@v4
 
-      - name: Generate Snake animation
+      - name: Gerar cobrinha estilo Matrix 🐍
         uses: Platane/snk@v3
         with:
           github_user_name: thiago-de-mattos
-          outputs: dist/snake.svg
-          color_snake: '#00ff00'          # verde Matrix
-          color_dots: '#000000 #003300 #00ff00 #ffffff'  # fundo escuro + verde
-          color_bg: '#000000'        
+          outputs: |
+            dist/snake-matrix.svg
+            dist/snake-matrix.gif
+          color_snake: '#00ff00'              # Verde neon (Matrix)
+          color_dots: '#000000 #003300 #00ff00 #ffffff'  # Escala de verdes
+          color_bg: '#000000'                 # Fundo preto
 
-      - name: Push Snake animation
+      - name: Publicar no branch de saída (output)
         uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
           target_branch: output
           build_dir: dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
